--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -5,13 +5,15 @@
 
 
 html {
-    line-height: 1.2;
+    line-height: 1.5;
+    font-family: poppins, sans-serif;
+    font-weight: 400;
 }
 
 body {
     margin: 0;
     padding: 0;
-    font-size: 16px;
+    background-color: rgb(245, 245, 245);
 }
 
 img {
@@ -20,6 +22,7 @@ img {
 
 h1,h2,h3,h4,h5,h6 {
     margin: 0 0;
+    font-weight: 700;
 }
 
 a {
