--- a/src/assets/style/_header.scss
+++ b/src/assets/style/_header.scss
@@ -4,8 +4,9 @@
 
     a {
         font-size: 40px;
+        font-family: pacifico, sans-serif;
         &:hover {
-            transform: rotate(10deg) scale(1.1);
+            transform: rotate(8deg) scale(1.1);
         }
     }
 
@@ -13,6 +14,8 @@
         gap: 10px;
 
         a {
+            font-family: poppins, sans-serif;
+            font-weight: 300;
             transform: unset;
             color: #6426d9;
             padding: 10px 20px;
