--- a/src/assets/style/_home.scss
+++ b/src/assets/style/_home.scss
@@ -1,8 +1,8 @@
 .home-page {
     .hero {
         text-align: center;
-        height: 80vh;
-        background-image: url('../img/hero2.jpg');
+        height: 90vh;
+        background-image: url('../img/hero1.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -11,14 +11,8 @@
         .about-container {
             width: 100%;
             height: 100%;
-            background-image: linear-gradient(rgba(71, 71, 71), rgba(71, 71, 71, 0.5));
+            background-color: rgba(123, 123, 123, 0.45);
             color: white;
-
-            .about {
-                .info {
-                    font-size: 20px;
-                }
-            }
 
             .img-container {
                 width: 300px;
@@ -26,7 +20,26 @@
                     border-radius: 50%;
                 }
             }
+
+            .about {
+                text-transform: uppercase;
+                .name {
+                    font-size: 70px;
+                    margin-bottom: 20px;
+                }
+
+                .title {
+                    font-size: 30px;
+                }
+            }
         }
+    }
+
+    .info {
+        font-size: 20px;
+        text-align: center;
+        max-width: 60ch;
+        margin: 0 auto 50px;
     }
 
     .projects-preview-list-container {
@@ -60,6 +73,7 @@
                 background-repeat: no-repeat;
                 background-position: center;
                 border-radius: 10px;
+                box-shadow: 1px 1px 15px 0px #00000080;
             }
         }
     }
