--- a/src/assets/style/_home.scss
+++ b/src/assets/style/_home.scss
@@ -24,22 +24,45 @@
             .about {
                 text-transform: uppercase;
                 .name {
-                    font-size: 70px;
+                    font-size: 40px;
                     margin-bottom: 20px;
+
+                    @media screen and (min-width: 650px) {
+                        font-size: 50px;
+                    }
+                    @media screen and (min-width: 1000px) {
+                        font-size: 70px;
+                    }
+
                 }
 
                 .title {
-                    font-size: 30px;
+                    font-size: 25px;
+                    @media screen and (min-width: 650px) {
+                        font-size: 30px;
+                    }
                 }
             }
         }
     }
 
     .info {
-        font-size: 20px;
+        font-size: 16px;
         text-align: center;
-        max-width: 60ch;
+        max-width: 35ch;
         margin: 0 auto 50px;
+
+        @media screen and (min-width: 550px) {
+            max-width: 50ch;
+        }
+        @media screen and (min-width: 650px) {
+            max-width: 60ch;
+        }
+        @media screen and (min-width: 900px) {
+            font-size: 20px;
+        }
+
+
     }
 
     .projects-preview-list-container {
@@ -56,24 +79,56 @@
             
             &:hover {
                 cursor: pointer;
-                transform: scale(1.15);
                 background-color: #6426d9;
                 color: white;
             }
         }
 
         .projects-preview-list {      
-            gap: 30px;
+            gap: 10px;
             margin-bottom: 20px;
             
             .project-preview {
-                width: 400px;
-                height: 400px;
+                width: 120px;
+                height: 120px;
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-position: center;
                 border-radius: 10px;
                 box-shadow: 1px 1px 15px 0px #00000080;
+
+                @media screen and (min-width: 620px) {
+                    width: 150px;
+                    height: 150px;
+                }
+
+                @media screen and (min-width: 900px) {
+                    width: 200px;
+                    height: 200px;
+                }
+
+                @media screen and (min-width: 1000px) {
+                    width: 250px;
+                    height: 250px;
+                }
+
+                @media screen and (min-width: 1120px) {
+                    width: 300px;
+                    height: 300px;
+                }
+            
+                @media screen and (min-width: 1300px) {
+                    width: 350px;
+                    height: 350px;
+                }
+
+                @media screen and (min-width: 1500px) {
+                    width: 400px;
+                    height: 400px;
+                }
+            }
+            @media screen and (min-width: 900px) {
+                gap: 30px;
             }
         }
     }
@@ -86,11 +141,18 @@
         color: #6426d9;
         border-radius: 30px;
         padding: 10px 20px;
-        font-size: 40px;
+        font-size: 20px;
 
         &:hover {
             background-color: #6426d9;
             color: white;
+        }
+        @media screen and (min-width: 650px) {
+            font-size: 30px;
+        }
+
+        @media screen and (min-width: 1000px) {
+            font-size: 40px;
         }
     }
 }
