--- a/src/assets/style/_projects.scss
+++ b/src/assets/style/_projects.scss
@@ -8,9 +8,34 @@
 
     .projects-list {
         display: grid;
-        grid-template-columns: 400px 400px 400px;
+        grid-template-columns: 400px;
         grid-auto-rows: 250px;
-        gap: 30px;
+        gap: 20px;
+        margin-bottom: 50px;
+
+        @media screen and (min-width: 750px) {
+            grid-template-columns: 350px 350px;
+
+        }
+
+        @media screen and (min-width: 850px) {
+            grid-template-columns: 400px 400px;
+        }
+
+        @media screen and (min-width: 1000px) {
+            grid-template-columns: 300px 300px 300px;
+            grid-auto-rows: 200px;
+            gap: 30px;
+        }
+
+        @media screen and (min-width: 1150px) {
+            grid-template-columns: 350px 350px 350px;
+            grid-auto-rows: 250px;
+        }
+
+        @media screen and (min-width: 1300px) {
+            grid-template-columns: 400px 400px 400px;
+        }
 
         .project-card {
             background-size: cover;
@@ -18,6 +43,7 @@
             background-position: center;
             border-radius: 10px;
             box-shadow: 1px 1px 15px 0px #00000080;
+            transition: all 0.5s;
 
             &:hover {
                 transform: scale(1.05);
@@ -49,7 +75,7 @@
                 .project-link {
                     opacity: 0;
                     width: 80%;
-                    transition: all 1.5s;
+                    transition: opacity 1s;
                 }
 
                 .project-link {
