--- a/src/assets/style/_header.scss
+++ b/src/assets/style/_header.scss
@@ -3,10 +3,14 @@
     padding: 15px 20px;
 
     a {
-        font-size: 25px;
+        font-size: 18px;
         font-family: pacifico, sans-serif;
         &:hover {
             transform: rotate(8deg) scale(1.1);
+        }
+
+        @media screen and (min-width: 420px) {
+            font-size: 25px;
         }
 
         @media screen and (min-width: 550px) {
@@ -27,7 +31,7 @@
             transform: unset;
             color: #6426d9;
             padding: 10px 20px;
-            font-size: 14px;
+            font-size: 10px;
             border: 1px solid transparent;
             border-radius: 30px;
             
@@ -39,6 +43,9 @@
                 border: 1px solid #6426d9;
                 background-color: #6426d9;
                 color: white;
+            }
+            @media screen and (min-width: 420px) {
+                font-size: 14px;
             }
 
             @media screen and (min-width: 550px) {
