--- a/src/assets/style/_projects.scss
+++ b/src/assets/style/_projects.scss
@@ -3,19 +3,29 @@
     gap: 50px;
 
     .page-title {
-        font-size: 50px;
+        font-size: 40px;
+
+        @media screen and (min-width: 500px) {
+            font-size: 50px;
+        }
     }
 
     .projects-list {
         display: grid;
-        grid-template-columns: 400px;
-        grid-auto-rows: 250px;
+        grid-template-columns: 300px;
+        grid-auto-rows: 200px;
         gap: 20px;
         margin-bottom: 50px;
 
+        @media screen and (min-width: 430px) {
+            grid-template-columns: 400px;
+            grid-auto-rows: 250px;
+            gap: 30px;
+        }
+
         @media screen and (min-width: 750px) {
             grid-template-columns: 350px 350px;
-
+            gap: 20px;
         }
 
         @media screen and (min-width: 850px) {
