--- a/src/assets/style/_home.scss
+++ b/src/assets/style/_home.scss
@@ -78,8 +78,15 @@
 
     }
 
+    .projects-preview-headline {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
     .projects-preview-list-container {
         gap: 5px;
+        margin-bottom: 20px;
+        
         .page-btn {
             background-color: unset;
             border: 1px solid #6426d9;
@@ -108,27 +115,27 @@
             margin-bottom: 20px;
             
             .project-preview {
-                width: 120px;
-                height: 120px;
+                width: 400px;
+                height: 400px;
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-position: center;
                 border-radius: 10px;
                 box-shadow: 1px 1px 15px 0px #00000080;
 
-                @media screen and (min-width: 620px) {
-                    width: 150px;
-                    height: 150px;
+                @media screen and (min-width: 760px) {
+                    width: 300px;
+                    height: 300px;
                 }
 
-                @media screen and (min-width: 900px) {
-                    width: 200px;
-                    height: 200px;
+                @media screen and (min-width: 800px) {
+                    width: 350px;
+                    height: 350px;
                 }
 
                 @media screen and (min-width: 1000px) {
-                    width: 250px;
-                    height: 250px;
+                    width: 400px;
+                    height: 400px;
                 }
 
                 @media screen and (min-width: 1120px) {
