--- a/src/assets/style/_projects.scss
+++ b/src/assets/style/_projects.scss
@@ -55,6 +55,7 @@
             box-shadow: 1px 1px 15px 0px #00000080;
             transition: all 0.5s;
 
+
             &:hover {
                 transform: scale(1.05);
             }
@@ -63,7 +64,7 @@
             .text-container {
                 width: 100%;
                 height: 100%;
-                background-color: rgba(83, 83, 83, 0.7);
+                background-color: rgba(83, 83, 83, 0.8);
                 border-radius: 10px;
                 color: white;
                 position: relative;
@@ -77,8 +78,21 @@
                 .project-name {
                     position: absolute;
                     left: 50%;
-                    top: 50%;
-                    transform: translate(-50%,-50%);
+                    top: 10%;
+                    transform: translateX(-50%);
+                }
+
+                .tech-list {
+                    padding: unset;
+                    gap: 30px;
+                    max-width: 90%;
+                    flex-wrap: wrap;
+                    font-size: 14px;
+                    position: absolute;
+                    left: 50%;
+                    bottom: 10%;
+                    transform: translateX(-50%);
+                    font-weight: bold;
                 }
 
                 .project-desc,
@@ -103,7 +117,7 @@
 
                 &:hover {
 
-                    .project-name {
+                    .project-name, .tech-list {
                         display: none;
                     }
 
