--- a/src/assets/style/_home.scss
+++ b/src/assets/style/_home.scss
@@ -86,7 +86,7 @@
     .projects-preview-list-container {
         gap: 5px;
         margin-bottom: 20px;
-        
+
         .page-btn {
             background-color: unset;
             border: 1px solid #6426d9;
@@ -115,13 +115,23 @@
             margin-bottom: 20px;
             
             .project-preview {
-                width: 400px;
-                height: 400px;
+                width: 240px;
+                height: 240px;
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-position: center;
                 border-radius: 10px;
                 box-shadow: 1px 1px 15px 0px #00000080;
+
+                @media screen and (min-width: 420px) {
+                    width: 300px;
+                    height: 300px;
+                }
+
+                @media screen and (min-width: 560px) {
+                    width: 400px;
+                    height: 400px;
+                }
 
                 @media screen and (min-width: 760px) {
                     width: 300px;
