typewriter-effect, fixed color vars, fixed sass structure, fixed some bugs with resposnsivity

--- a/src/assets/style/cmps/_footer.scss
+++ b/src/assets/style/cmps/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: #6426d9;
+    background-color: $primary;
     text-align: center;
     padding: 20px;
     color: white;
