--- a/src/assets/style/cmps/_header.scss
+++ b/src/assets/style/cmps/_header.scss
@@ -29,20 +29,20 @@
             font-family: poppins, sans-serif;
             font-weight: 300;
             transform: unset;
-            color: #6426d9;
+            color: $primary;
             padding: 10px 20px;
             font-size: 10px;
             border: 1px solid transparent;
             border-radius: 30px;
             
             &.active {
-                border: 1px solid #6426d9;
+                border: 1px solid $primary;
             }
             
             &:hover {
-                border: 1px solid #6426d9;
-                background-color: #6426d9;
-                color: white;
+                border: 1px solid $primary;
+                background-color: $primary;
+                color: $white-text;
             }
             @media screen and (min-width: 420px) {
                 font-size: 14px;
